--- a/test.html
+++ b/test.html
@@ -14,8 +14,8 @@
     <div class = "input_location">
       <div class="autocomplete-container">
         <label for="city">Enter City: </label>
-        <input list="cities" id="city" name="city" autocomplete="off">
-        <datalist id="cities"></datalist>
+        <input type="text" id="city" name="city">
+        <button id="submitBtn">Submit</button>
       </div>
     </div>
 
