change to pulling 5 images

--- a/test.html
+++ b/test.html
@@ -20,7 +20,9 @@
     </div>
 
     <p>This webpage displays a live image from a Windy City webcam.</p>
-    <img id="webcam_image" src="placeholder.jpg" alt="Windy City Webcam">
+    <div class = "webcam_image_div">
+      <img id="webcam_image" src="placeholder.jpg" alt="Windy City Webcam">
+    </div>
 
   </div>
 
