--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
 
     <p>This webpage displays a live image from a Windy City webcam.</p>
     <div class = "webcam_image_div">
-      <img id="webcam_image" src="placeholder.jpg" alt="Windy City Webcam">
+      <img id="webcam_image" src="placeholder.jpg" alt="Webcam images will go here.">
     </div>
 
   </div>
