--- a/test.html
+++ b/test.html
@@ -19,10 +19,13 @@
       </div>
     </div>
 
-    <p>This webpage displays a live image from a Windy City webcam.</p>
-    <div class = "webcam_image_div">
-      <img id="webcam_image" src="placeholder.jpg" alt="Webcam images will go here.">
+    <div class = "weather_div">
+      <p>This webpage displays a live image from a Windy City webcam.</p>
+      <div class = "webcam_image_div">
+        <img id="webcam_image" src="placeholder.jpg" alt="Webcam images will go here.">
+      </div>     
     </div>
+
 
   </div>
 
