--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <head>
   <title>Windy City Live Webcam</title>
   <script src="myjs.js" defer></script>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&family=Mate&family=Montserrat&family=Open+Sans&family=Roboto&family=Work+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,9 +24,11 @@
       <p>This webpage displays a live image from a Windy City webcam.</p>
       <div class = "webcam_image_div">
         <img id="webcam_image" src="placeholder.jpg" alt="Webcam images will go here.">
-      </div>     
+      </div> 
     </div>
-
+    <div class = "weather">
+        
+    </div>
 
   </div>
 
