fix weather cards

--- a/test.html
+++ b/test.html
@@ -26,8 +26,11 @@
           <img id="webcam_image" src="placeholder.jpg" alt="Webcam images will go here.">
         </div> 
       </div>
-      <div class = "weather_readings">
-    </div>
+      <div class = "weather_values">
+        <div class = "weather_readings">
+        </div>
+      </div>
+
     
       
     </div>
