--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     
       
     </div>
+    <div id="imageModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="modalImage">
+    </div>
+  
 
 
   </div>
